Fri Jan  4 15:50:25 CET 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: increased the max number of parameters

Thu Dec 20 14:54:27 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt.pc.in configure.in: added pkg-config file from Rodrigo Moya

Thu Dec 20 14:49:39 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in: applied albert portability patch
	* libxslt/libxslt.h libxslt/xslt.h libxslt/xsltconfig.h.in
	 libxslt/xsltutils.c libxslt/xsltwin32config.h.in win32/dsp/libxslt.def:
	 applied Igor patch for Windows

Tue Dec 11 15:27:15 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: fixed a problem with the debuuger interface.

Fri Dec  7 15:48:48 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.9
	* doc/*: updated and rebuild the doc

Thu Dec  6 14:57:56 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in libexslt/Makefile.am: trying to fix the problem
	  related to prelinking and libtools crazyness

Wed Dec  5 18:49:53 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c libxslt/variables.c: applied Keith Isdale
	  patch for the debugger glue.

Wed Dec  5 18:43:45 CET 2001 Daniel Veillard <daniel@veillard.com>

	* breakpoint/Makefile.am breakpoint/deprecated.c: replaced
	  the whole module with just the entry points.

Fri Nov 30 18:59:50 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: Nik Clayton found a bug introduced in
	  1.0.8 when using doctypes for HTML output

Fri Nov 30 12:59:05 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/attributes.c libxslt/transform.c libxslt/xsltutils.c
	  libxslt/xsltutils.h: revamped the mechanism to hook a debuger
	  to use a callback setup function, deprecating libxsltbreakpoint
	* xsltproc/Makefile.am configure.in breakpoint/Makefile.am: removing
	  dependancies on libxsltbreakpoint

Thu Nov 29 09:52:38 CET 2001 Daniel Veillard <daniel@veillard.com>
