@@ -36,58 +36,108 @@ If a stylesheet is included in an XML document with a Stylesheet Processing Inst
 .PP
 By default, output is to stdout. You can specify a file for output using the \fB-o\fR option.
 
-.SH "OPTIONS"
+.SH "COMMAND LINE OPTIONS"
 
-.PP
-\fB-V\fR or \fB--version\fR - Show the version of libxml and libxslt used.
+.TP
+\fB-V\fR or \fB--version\fR
 
-.PP
-\fB-v\fR or \fB--verbose\fR - Output each step taken by xsltproc in processing the stylesheet and the document.
+Show the version of libxml and libxslt used.
 
-.PP
-\fB-o\fR or \fB--output\fR \fIfile\fR - Direct output to the file named \fIfile\fR. For multiple outputs, also known as "chunking", \fB-o\fR \fBdirectory/\fR directs the output files to a specified directory. The directory must already exist.
+.TP
 
-.PP
-\fB--timing\fR - Display the time used for parsing the stylesheet, parsing the document and applying the stylesheet and saving the result. Displayed in milliseconds.
+      \fB-v\fR or \fB--verbose\fR
 
-.PP
-\fB--repeat\fR - Run the transformation 20 times. Used for timing tests.
+Output each step taken by xsltproc in processing the stylesheet and the document.
 
-.PP
-\fB--debug\fR - Output an XML tree of the transformed document for debugging purposes.
+.TP
 
-.PP
-\fB--novalid\fR - Skip loading the document's DTD.
+      \fB-o\fR or \fB--output\fR\fIfile\fR
 
-.PP
-\fB--noout\fR - Do not output the result.
+Direct output to the file named \fIfile\fR. For multiple outputs, also known as "chunking", \fB-o\fR \fBdirectory/\fR directs the output files to a specified directory. The directory must already exist.
 
-.PP
-\fB--maxdepth\fR \fIvalue\fR - Adjust the maximum depth of the template stack before libxslt concludes it is in an infinite loop. The default is 500.
+.TP
 
-.PP
-\fB--html\fR - The input document is an HTML file.
+      \fB--timing\fR
 
-.PP
-\fB--docbook\fR - The input document is DocBook SGML.
+Display the time used for parsing the stylesheet, parsing the document and applying the stylesheet and saving the result. Displayed in milliseconds.
 
-.PP
-\fB--param\fR \fIname\fR \fIvalue\fR - Pass a parameter of name \fIname\fR and value \fIvalue\fR to the stylesheet. You may pass multiple name/value pairs up to a maximum of 8. .PP If the value being passed is a string rather than a node identifier, it must be escaped in quotes, as follows: .PP xsltproc --param rootid '"introduction"' \fIstylesheet\fR \fIfile\fR
+.TP
 
-.PP
-\fB--nonet\fR - Do not use the Internet to fetch DTD's or entities.
+      \fB--repeat\fR
 
-.PP
-\fB--warnnet\fR - Output notification when DTD's or entities are fetched over the Internet.
+Run the transformation 20 times. Used for timing tests.
 
-.PP
-\fB--catalogs\fR - Use catalogs to resolve the location of external entities. This speeds DTD resolution. By having a catalog file point to a local version of the DTD, xsltproc does not have to use the Internet to fetch the DTD. xsltproc uses the catalog identified by the environmental variable \fBSGML_CATALOG_FILES\fR.
+.TP
 
-.PP
-\fB--xinclude\fR - Process the input document using the Xinclude specification. More details on this can be found in the Xinclude specification: http://www.w3.org/TR/xinclude/: \fIhttp://www.w3.org/TR/xinclude/\fR
+      \fB--debug\fR
 
-.PP
-\fB--profile\fR or \fB--norman\fR - Output profiling information detailing the amount of time spent in each part of the stylesheet. This is useful in optimizing stylesheet performance.
+Output an XML tree of the transformed document for debugging purposes.
+
+.TP
+
+      \fB--novalid\fR
+
+Skip loading the document's DTD.
+
+.TP
+
+      \fB--noout\fR
+
+Do not output the result.
+
+.TP
+
+      \fB--maxdepth\fR \fIvalue\fR
+
+Adjust the maximum depth of the template stack before libxslt concludes it is in an infinite loop. The default is 500.
+
+.TP
+
+      \fB--html\fR
+
+The input document is an HTML file.
+
+.TP
+
+      \fB--docbook\fR
+
+The input document is DocBook SGML.
+
+.TP
+
+      \fB--param\fR \fIname\fR\fIvalue\fR
+
+Pass a parameter of name \fIname\fR and value \fIvalue\fR to the stylesheet. You may pass multiple name/value pairs up to a maximum of 32. If the value being passed is a string rather than a node identifier it must be escaped in quotes, as follows: xsltproc --param rootid '"introduction"' \fIstylesheet\fR \fIfile\fR
+
+.TP
+
+      \fB--nonet\fR
+
+Do not use the Internet to fetch DTD's or entities.
+
+.TP
+
+      \fB--warnnet\fR
+
+Output notification when DTD's or entities are fetched over the Internet.
+
+.TP
+
+      \fB--catalogs\fR
+
+Use catalogs to resolve the location of external entities. This speeds DTD resolution. By having a catalog file point to a local version of the DTD, xsltproc does not have to use the Internet to fetch the DTD. xsltproc uses the catalog identified by the environmental variable \fBSGML_CATALOG_FILES\fR.
+
+.TP
+
+      \fB--xinclude\fR
+
+Process the input document using the Xinclude specification. More details on this can be found in the Xinclude specification: http://www.w3.org/TR/xinclude/: \fIhttp://www.w3.org/TR/xinclude/\fR
+
+.TP
+
+      \fB--profile\fR or \fB--norman\fR
+
+Output profiling information detailing the amount of time spent in each part of the stylesheet. This is useful in optimizing stylesheet performance.
 
 .SH "RETURN VALUES"
 
@@ -129,10 +179,4 @@ W3C XSLT page: http://www.w3.org/TR/xslt: \fIhttp://www.w3.org/TR/xslt\fR
 .SH AUTHOR
 Copyright 2001
 .Sp
-John Fleck  <jfleck@inkstain.net>
-.PP
-Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License: \fIgnome-help:fdl\fR, Version 1.1 or any later version published by the Free Software Foundation with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts. A copy of the license can be found here: \fIgnome-help:fdl\fR.
-
-.PP
-Many of the names used by companies to distinguish their products and services are claimed as trademarks. Where those names appear in any GNOME documentation, and those trademarks are made aware to the members of the GNOME Documentation Project, the names have been printed in caps or initial caps.
-This is release 0.1 of the xsltproc Manual.
+John Fleck  <jfleck@inkstain.net>This is release 0.2 of the xsltproc Manual.
