@@ -14,22 +14,8 @@
       <surname>Fleck</surname>
     </author>
     <address><email>jfleck@inkstain.net</email></address>
-    <legalnotice id="legalnotice">
-      <para>Permission is granted to copy, distribute and/or modify this document
-	under the terms of the <ulink type="help" url="gnome-help:fdl"><citetitle>GNU Free Documentation
-	    License</citetitle></ulink>, Version 1.1 or any later version 
-	published by the Free Software Foundation with no Invariant Sections, 
-	no Front-Cover Texts, and no Back-Cover Texts.  A copy of the license
-	can be found <ulink type="help" url="gnome-help:fdl">here</ulink>.
-      </para>
-      <para>Many of the names used by companies to distinguish their products and
-	services are claimed as trademarks. Where those names appear in any
-	GNOME documentation, and those trademarks are made aware to the members
-	of the GNOME Documentation Project, the names have been printed in caps
-	or initial caps.
-      </para>
-    </legalnotice>
-    <releaseinfo>This is release 0.1 of the xsltproc Manual.</releaseinfo>
+    
+    <releaseinfo>This is release 0.2 of the xsltproc Manual.</releaseinfo>
   </refentryinfo>
 
   <refmeta>
@@ -102,119 +88,213 @@
   </refsect1>
 
   <refsect1 id="options">
-    <title>Options</title>
+    <title>Command Line Options</title>
     
-    <para>
-      <option>-V</option> or <option>--version</option> - Show the version of
+    <variablelist>
+      <varlistentry>
+	<term><option>-V</option> or <option>--version</option></term>
+	<listitem>
+	  <simpara>Show the version of
       <application>libxml</application> and <application>libxslt</application> used.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>-v</option> or <option>--verbose</option> - Output each step taken
+    
+      <varlistentry>
+	<term>
+      <option>-v</option> or <option>--verbose</option></term>
+	<listitem>
+	  <simpara>Output each step taken
       by <application>xsltproc</application> in processing the stylesheet and the document.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>-o</option> or <option>--output</option>
-      <replaceable>file</replaceable> - Direct output to the file named
+    
+      <varlistentry>
+	<term>
+      <option>-o</option> or <option>--output</option> <replaceable>file</replaceable></term>
+	<listitem>
+	  <simpara>Direct output to the file named
       <replaceable>file</replaceable>. For multiple outputs, also known as
       "chunking", <option>-o</option> <option>directory/</option> directs the
       output files to a specified directory. The directory must already exist.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--timing</option> - Display the time used for parsing the
+    
+      <varlistentry>
+	<term>
+      <option>--timing</option></term>
+	<listitem>
+	  <simpara>Display the time used for parsing the
       stylesheet, parsing the document and applying the stylesheet and saving
       the result. Displayed in milliseconds.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--repeat</option> - Run the transformation 20 times. Used for
+    
+      <varlistentry>
+	<term>
+      <option>--repeat</option></term>
+	<listitem>
+	  <simpara>Run the transformation 20 times. Used for
       timing tests.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--debug</option> - Output an <acronym>XML</acronym> tree of the
+    
+      <varlistentry>
+	<term>
+      <option>--debug</option></term>
+	<listitem>
+	  <simpara>Output an <acronym>XML</acronym> tree of the
       transformed document for debugging purposes.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--novalid</option> - Skip loading the document's <acronym>DTD</acronym>.
-    </para>
+    
+      <varlistentry>
+	<term>
+      <option>--novalid</option></term>
+	<listitem>
+	  <simpara>Skip loading the document's <acronym>DTD</acronym>.
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--noout</option> - Do not output the result.
-    </para>
+    
+      <varlistentry>
+	<term>
+      <option>--noout</option></term>
+	<listitem>
+	  <simpara>Do not output the result.
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--maxdepth</option> <replaceable>value</replaceable> - Adjust the
+    
+      <varlistentry>
+	<term>
+      <option>--maxdepth</option> <replaceable>value</replaceable></term>
+	<listitem>
+	  <simpara>Adjust the
       maximum depth of the template stack before
       <application>libxslt</application> concludes it is in an infinite
       loop. The default is 500.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--html</option> - The input document is an <acronym>HTML</acronym>
+    
+      <varlistentry>
+	<term>
+      <option>--html</option></term>
+	<listitem>
+	  <simpara>The input document is an <acronym>HTML</acronym>
       file.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--docbook</option> - The input document is DocBook
+    
+      <varlistentry>
+	<term>
+      <option>--docbook</option></term>
+	<listitem>
+	  <simpara>The input document is DocBook
       <acronym>SGML</acronym>.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--param</option> <replaceable>name</replaceable>
-      <replaceable>value</replaceable> - Pass a parameter of name
+    
+      <varlistentry>
+	<term>
+      <option>--param</option> <replaceable>name</replaceable><replaceable>value</replaceable></term>
+	<listitem>
+	  <simpara>Pass a parameter of name
       <replaceable>name</replaceable> and value
       <replaceable>value</replaceable> to the stylesheet. You may pass multiple
-      name/value pairs up to a maximum of 8.
-
-      <note>
-	<para>
-	  If the value being passed is a string rather than a node identifier,
-	  it must be escaped in quotes, as follows:
-	</para>
-	<para>
+      name/value pairs up to a maximum of 32. If the value being passed is a
+      string rather than a node identifier it must be escaped in quotes, as follows:
 	  xsltproc --param rootid '"introduction"'
 	  <replaceable>stylesheet</replaceable> <replaceable>file</replaceable>
 
-	</para>
-      </note>
-    </para>
+	</simpara>
+      
+    
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--nonet</option> - Do not use the Internet to fetch DTD's or
+    
+      <varlistentry>
+	<term>
+      <option>--nonet</option></term>
+	<listitem>
+	  <simpara>Do not use the Internet to fetch DTD's or
       entities.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--warnnet</option> - Output notification when DTD's or entities
+    
+      <varlistentry>
+	<term>
+      <option>--warnnet</option></term>
+	<listitem>
+	  <simpara>Output notification when DTD's or entities
       are fetched over the Internet.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--catalogs</option> - Use catalogs to resolve the location of
+    
+      <varlistentry>
+	<term>
+      <option>--catalogs</option></term>
+	<listitem>
+	  <simpara>Use catalogs to resolve the location of
       external entities. This speeds DTD resolution. By having a
       catalog file point to a local version of the DTD,
       <application>xsltproc</application> does not have to use the
       Internet to fetch the DTD. <application>xsltproc</application>
       uses the catalog identified by the environmental variable
       <envar>SGML_CATALOG_FILES</envar>.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
 
-    <para>
-      <option>--xinclude</option> - Process the input document using the
+    
+      <varlistentry>
+	<term>
+      <option>--xinclude</option></term>
+	<listitem>
+	  <simpara>Process the input document using the
       Xinclude specification. More details on this can be found in the Xinclude
       specification: <ulink
       url="http://www.w3.org/TR/xinclude/">http://www.w3.org/TR/xinclude/</ulink>
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
     
-    <para>
-      <option>--profile</option> or <option>--norman</option> - Output profiling
+    
+      <varlistentry>
+	<term>
+      <option>--profile</option> or <option>--norman</option></term>
+	<listitem>
+	  <simpara>Output profiling
       information detailing the amount of time spent in each part of the
       stylesheet. This is useful in optimizing stylesheet performance.
-    </para>
+    </simpara>
+	</listitem>
+      </varlistentry>
+    </variablelist>
   </refsect1>
 
   <refsect1 id="return">
